[gd_scene load_steps=8 format=3 uid="uid://c5ea5yed0s5yf"]

[ext_resource type="Script" path="res://Scenes/settings.gd" id="1_4tdos"]
[ext_resource type="FontFile" uid="uid://cg03ls2khnai" path="res://fonts/dogica.otf" id="1_50as0"]
[ext_resource type="FontFile" uid="uid://dytmi3e7gkhj0" path="res://fonts/pixely[1].ttf" id="2_g03gn"]
[ext_resource type="AudioStream" uid="uid://mhqes1q4k26a" path="res://Wayfarin_ Stranger (Alto) Audio Only.mp3" id="4_q1a28"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mym27"]
bg_color = Color(0.666667, 0.541176, 0.756863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dfl1"]
bg_color = Color(0.397429, 0.644458, 0.704941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32ugk"]
bg_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tdos")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="volume_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_50as0")
text = "VOLUME"

[node name="volume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="mute_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_50as0")
text = "MUTE"

[node name="mute" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2

[node name="return_button" type="Button" parent="."]
layout_mode = 2
offset_left = 478.0
offset_top = 412.0
offset_right = 660.0
offset_bottom = 463.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_g03gn")
theme_override_styles/normal = SubResource("StyleBoxFlat_mym27")
theme_override_styles/hover = SubResource("StyleBoxFlat_4dfl1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_32ugk")
text = "RETURN"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_q1a28")
autoplay = true

[connection signal="value_changed" from="VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="VBoxContainer/mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="return_button" to="." method="_on_return_button_pressed"]
